Render ListView based on listConfig

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "variables.scss";
 @import "~bootstrap/scss/bootstrap";
+@import "~frappe-datatable/dist/frappe-datatable.css";
 
 html {
   font-size: 14px;
