* Dynamic Filters * Report Actions

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,9 @@
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
 
 $dark: #252529;
-$blue: #1665D8;
+$blue: #1665d8;
+$frappe: #5e64ff;
+$theme-colors: (
+  'primary': #5e64ff
+);
