--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,8 @@
-@import "variables.scss";
-@import "~bootstrap/scss/bootstrap";
-@import "~frappe-datatable/dist/frappe-datatable.css";
+@import 'variables.scss';
+@import '~bootstrap/scss/bootstrap';
+@import '~frappe-datatable/dist/frappe-datatable.css';
 
 html {
   font-size: 14px;
+  overflow: hidden;
 }
