feat: Add Inter font

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'Inter var experimental';
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: oblique 0deg 10deg;
+  src: url('../assets/fonts/Inter.var.woff2') format('woff2');
+}
+
+* {
+  font-variation-settings: 'slnt' 0deg;
+}
+.italic {
+  font-variation-settings: 'slnt' 10deg;
+}
+
 @tailwind base;
 
 @tailwind components;
