feat: Invoice Template Customizer
- Template, Color and Font fields in PrintSettings
- font-manager for loading system fonts
- 3 Invoice Templates: Default, Minimal and Business
- Delete unused old Templates
- Dont show Delete button in Singles
- Rename font family "Inter var experimental" to "Inter"

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Inter var experimental';
+  font-family: 'Inter';
   font-weight: 100 900;
   font-display: swap;
   font-style: oblique 0deg 10deg;
