--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Inter' !important;
   font-weight: 100 900;
   font-display: swap;
   font-style: oblique 0deg 10deg;
