--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,6 +53,20 @@ html {
   display: none;
 }
 
+:root {
+  --w-sidebar: 12rem;
+  --w-desk: calc(100vw - 12rem);
+  --w-scrollbar: 0.5rem;
+  
+
+  /* Row Heights */
+  --h-row-smallest: 2rem;
+  --h-row-small: 2.5rem;
+  --h-row-mid: 3rem;
+  --h-row-large: 3.5rem;
+  --h-row-largest: 4rem;
+}
+
 .w-form {
   width: 600px;
 }
@@ -61,10 +75,24 @@ html {
   height: 800px;
 }
 
-:root {
-  --w-sidebar: 12rem;
-  --w-desk: calc(100vw - 12rem);
-  --w-scrollbar: 8px;
+.h-row-smallest {
+  height: var(--h-row-smallest);
+}
+
+.h-row-small {
+  height: var(--h-row-small);
+}
+
+.h-row-mid {
+  height: var(--h-row-mid);
+}
+
+.h-row-large {
+  height: var(--h-row-large);
+}
+
+.h-row-largest {
+  height: var(--h-row-largest);
 }
 
 .w-sidebar {
