--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -64,6 +64,7 @@ input[type='number']::-webkit-inner-spin-button {
   --w-desk-fixed: calc(var(--w-app) - var(--w-sidebar));
   --w-quick-edit: 22rem;
   --w-scrollbar: 0.6rem;
+  --w-trafficlights: 72px;
 
   /* Row Heights */
   --h-row-smallest: 2rem;
