change left/right->start/end to support rtl

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -168,3 +168,11 @@ input[type='number']::-webkit-inner-spin-button {
 .quickedit-leave-active {
   transition: all 150ms ease-out;
 }
+
+/* 
+  RTL
+ */
+ 
+[dir="rtl"] .rtl-rotate-180{
+  transform: rotate(180deg);
+}
