fix: add custom-scroll border to right for RTL

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -176,3 +176,7 @@ input[type='number']::-webkit-inner-spin-button {
 [dir="rtl"] .rtl-rotate-180{
   transform: rotate(180deg);
 }
+
+[dir="rtl"] .custom-scroll::-webkit-scrollbar-track:vertical {
+  border-right: solid 1px theme('colors.gray.200');
+}
