incr: add shortcuts to go back and - save, submit, cancel and delete a focused doc - fix search filter issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -82,6 +82,7 @@ input[type='number']::-webkit-inner-spin-button {
 
 .w-quick-edit {
   width: var(--w-quick-edit);
+  flex-shrink: 0;
 }
 
 .h-form {
