--- a/templates/Business.template.html
+++ b/templates/Business.template.html
@@ -56,11 +56,11 @@
   <section class="px-12 pt-12 text-lg">
     <!-- Heading Row -->
     <section class="mb-4 flex font-semibold">
-      <div class="w-4/12">Item</div>
-      <div class="w-2/12 text-right" v-if="doc.showHSN">HSN/SAC</div>
-      <div class="w-2/12 text-right">Quantity</div>
-      <div class="w-3/12 text-right">Rate</div>
-      <div class="w-3/12 text-right">Amount</div>
+      <div class="w-4/12">{{ t`Item` }}</div>
+      <div class="w-2/12 text-right" v-if="doc.showHSN">{{ t`HSN/SAC` }}</div>
+      <div class="w-2/12 text-right">{{ t`Quantity` }}</div>
+      <div class="w-3/12 text-right">{{ t`Rate` }}</div>
+      <div class="w-3/12 text-right">{{ t`Amount` }}</div>
     </section>
 
     <!-- Body Rows -->
