--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,8 +25,9 @@ html {
 }
 
 html.dark {
-  color: theme('colors.white');
+  color: theme('colors.black');
   background-color: theme('colors.gray.900');
+  color-scheme: dark;
 }
 
 html.dark input[type='date']::-webkit-calendar-picker-indicator {
