--- a/templates/Basic.template.html
+++ b/templates/Basic.template.html
@@ -31,7 +31,11 @@
     <!-- Invoice Details -->
     <section class="w-1/3">
       <h2 class="text-2xl font-semibold">{{ doc.name }}</h2>
-      <p class="py-2 text-base">{{ doc.date }}</p>
+
+      <div class="flex gap-2">
+        <p class="py-2 text-base">{{ doc.date }}</p>
+        <p class="py-2 text-base">{{ doc?.time }}</p>
+      </div>
     </section>
 
     <!-- Party Details -->
