--- a/templates/Business.Payment.template.html
+++ b/templates/Business.Payment.template.html
@@ -72,7 +72,9 @@
   </section>
 
   <section class="w-1/2 px-12 pb-6 text-lg" v-if="doc.taxes.length">
-    <p class="flex justify-center font-semibold text-lg mt-2">{{t`Tax Summary`}}</p>
+    <p class="flex justify-center font-semibold text-lg mt-2">
+      {{t`Tax Summary`}}
+    </p>
 
     <div
       class="flex justify-between pl-5 text-base"
@@ -116,7 +118,7 @@
 
     <!-- Invoice Terms -->
     <section class="mt-12" v-if="doc.terms">
-      <h3 class="text-lg font-semibold">{{t`Notes`}}/h3>
+      <h3 class="text-lg font-semibold">{{t`Notes`}}</h3>
 
       <p class="mt-4 text-lg whitespace-pre-line">{{ doc.terms }}</p>
     </section>
