--- a/templates/Business.template.html
+++ b/templates/Business.template.html
@@ -61,6 +61,7 @@
     <!-- Heading Row -->
     <section class="mb-4 flex font-semibold">
       <div class="w-4/12">{{ t`Item` }}</div>
+      <div class="w-4/12" v-if="doc.description">{{ t`Description` }}</div>
       <div class="w-2/12 text-right" v-if="doc.showHSN">{{ t`HSN/SAC` }}</div>
       <div class="w-2/12 text-right">{{ t`Quantity` }}</div>
       <div class="w-3/12 text-right">{{ t`Rate` }}</div>
@@ -74,6 +75,7 @@
       :key="row.name"
     >
       <div class="w-4/12">{{ row.item }}</div>
+      <div class="w-4/12" v-if="doc.description">{{ row.description }}</div>
       <div class="w-2/12 text-right" v-if="doc.showHSN">{{ row.hsnCode }}</div>
       <div class="w-2/12 text-right">{{ row.quantity }}</div>
       <div class="w-3/12 text-right">{{ row.rate }}</div>
