fix: include converted loyalty points in grand total

--- a/templates/Business-POS.template.html
+++ b/templates/Business-POS.template.html
@@ -1,4 +1,4 @@
-<main class="h-auto w-auto m-2.5 p-0.5 pb-5 bg-white border border-gray-500">
+<main class="h-auto w-auto m-1 p-0.5 pb-5 bg-white">
   <!-- Invoice Header -->
   <header class="pt-4 flex flex-col items-center">
     <!-- Company Logo & Name -->
