--- a/templates/Business.template.html
+++ b/templates/Business.template.html
@@ -132,9 +132,21 @@
       <h3 class="text-lg font-semibold">{{t`Notes`}}</h3>
       <p class="mt-4 text-lg whitespace-pre-line">{{ doc.terms }}</p>
     </section>
+
     <div v-if="print.amountInWords" class="flex justify-end mt-10">
       <h3 class="text-lg font-semibold mr-2">{{t`Grand Total In Words`}}:</h3>
       <p>{{doc.grandTotalInWords}}</p>
     </div>
+
+    <!-- Terms and Conditions -->
+    <section
+      class="mt-12"
+      v-if="print.displaytermsandconditions && print.termsAndConditions"
+    >
+      <h3 class="text-lg font-semibold">{{t`Terms and Conditions`}}</h3>
+      <p class="mt-4 text-lg whitespace-pre-line">
+        {{ print.termsAndConditions }}
+      </p>
+    </section>
   </footer>
 </main>
