--- a/templates/Basic.template.html
+++ b/templates/Basic.template.html
@@ -153,4 +153,15 @@
       </div>
     </section>
   </footer>
+
+  <!-- Terms and Conditions -->
+  <section
+    class="mt-8 px-6"
+    v-if="print.displaytermsandconditions && print.termsAndConditions"
+  >
+    <h3 class="text-lg font-semibold">{{ t`Terms and Conditions` }}</h3>
+    <p class="mt-4 text-lg whitespace-pre-line">
+      {{ print.termsAndConditions }}
+    </p>
+  </section>
 </main>
